--- a/src/napari_destripe/napari.yaml
+++ b/src/napari_destripe/napari.yaml
@@ -2,47 +2,10 @@ name: napari-destripe
 display_name: Napari Destripe
 contributions:
   commands:
-    - id: napari-destripe.get_reader
-      python_name: napari_destripe._reader:napari_get_reader
-      title: Open data with Napari Destripe
-    - id: napari-destripe.write_multiple
-      python_name: napari_destripe._writer:write_multiple
-      title: Save multi-layer data with Napari Destripe
-    - id: napari-destripe.write_single_image
-      python_name: napari_destripe._writer:write_single_image
-      title: Save image data with Napari Destripe
-    - id: napari-destripe.make_sample_data
-      python_name: napari_destripe._sample_data:make_sample_data
-      title: Load sample data from Napari Destripe
-    - id: napari-destripe.make_qwidget
-      python_name: napari_destripe._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-destripe.make_magic_widget
-      python_name: napari_destripe._widget:example_magic_widget
-      title: Make example magic widget
     - id: napari-destripe.make_func_widget
-      python_name: napari_destripe._widget:example_function_widget
-      title: Make example function widget
-  readers:
-    - command: napari-destripe.get_reader
-      accepts_directories: false
-      filename_patterns: ['*.npy']
-  writers:
-    - command: napari-destripe.write_multiple
-      layer_types: ['image*','labels*']
-      filename_extensions: []
-    - command: napari-destripe.write_single_image
-      layer_types: ['image']
-      filename_extensions: ['.npy']
-  sample_data:
-    - command: napari-destripe.make_sample_data
-      display_name: Napari Destripe
-      key: unique_id.1
+      python_name: napari_destripe._widget:destripe
+      title: Destripe volume
   widgets:
-    - command: napari-destripe.make_qwidget
-      display_name: Example QWidget
-    - command: napari-destripe.make_magic_widget
-      display_name: Example Magic Widget
     - command: napari-destripe.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+#      autogenerate: true
+      display_name: Destripe Volume
