--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     numpy
     magicgui
     qtpy
-
+    pystripe @ git+https://git@github.com/chunglabmit/pystripe
 python_requires = >=3.8
 include_package_data = True
 package_dir =
